--- a/views/home.pug
+++ b/views/home.pug
@@ -198,7 +198,7 @@ body
         h1.bigtitle
             | Wynn Items
         h3
-            | By Electrolysis (Still under construction lol)
+            | By Electrolysis (Still under construction)
     .container
         form.searchform(onsubmit="return search()")
             .searchbar.row
@@ -218,10 +218,10 @@ body
                             option(value=key) #{val} #{suffixes[key]}
                 .filters-item
                     p.tag Min. Lvl:
-                    input(id = "min-lvl" type="number" placeholder="Level" value="0" disabled)
+                    input(id = "min-lvl" type="number" placeholder="Level" value="0")
                 .filters-item
                     p.tag Max. Lvl:
-                    input(id = "max-lvl" type="number" placeholder="Level" value="420" disabled)
+                    input(id = "max-lvl" type="number" placeholder="Level" value="420")
             .buttons.row
                 button(type="submit") Search
                 button#reset(type="cancel" onclick="window.location='/';return false;") Reset
